# SRPK

./: .env  .env.example  .gitignore  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  CRYPTO_PAYMENT_GUIDE.md  CRYPTO_SYSTEM_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.crypto  Dockerfile.download-api  Dockerfile.landing  Dockerfile.payment-api  Dockerfile.srpk-app  EULA_PRO.md  GIT_COMPARISON_GUIDE.md  LICENSE  PAYMENT_AND_LICENSING.md  PAYMENT_INTEGRATION.md  PRODUCTION_DEPLOYMENT.md  README.md  SECURITY.md  SUPPORT.md  crypto_payment_api.py  deploy-crypto.sh  deploy-production.sh  deploy.sh  docker-compose.crypto.yml  docker-compose.full.yml  docker-compose.prod.yml  docker-compose.yml  download_api.py  index.html  init_db.py  license_manager.py  mkdocs.yml  nginx.conf  nginx.crypto.conf  (+11 more)
.github/workflows/: ci.yml  deploy-complete.yml  deploy-pages.yml  deploy.yml  docs.yml  publish.yml  release-please.yml
contracts/: .env.example  SRPKPayment.sol  SRPKPayments.sol  SRPKWebhooks.sol  hardhat.config.js  package.json
contracts/scripts/: deploy-all.js  deploy.js
contracts/test/: SRPKPayment.test.js  SRPKWebhooks.test.js
docs/: api.md  index.md  usage.md
landing/: crypto-index.html  index.html  site.webmanifest
monitoring/: prometheus.yml
scripts/: deploy_contract.py
src/srpk/: __init__.py  cli.py
tests/: test_basic.py  test_cli.py  test_code_analyzer.py
