
[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "srpk"
version = "0.1.0"
description = "SRPK - Semantic Repository & Project Knowledge."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Raul Cruz Acosta" }]
license = { file = "LICENSE" }
keywords = ["srpk","knowledge-graph","static-analysis","ms"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "rich>=13",
  "networkx>=3",
  "pydantic>=2",
]

[project.urls]
Homepage = "https://github.com/Msc-Tecnologia/SRPK"
Documentation = "https://msc-tecnologia.github.io/SRPK/"
Purchasing = "https://tu-dominio/landing/"
Changelog = "https://github.com/Msc-Tecnologia/SRPK/releases"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["srpk*"]

[tool.srpk]
# espacio para flags internos de la CLI


[project.scripts]
srpk = "srpk.cli:main"
